--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ chk*
 # Model checkpoint files
 elion/generators/release/checkpoints/
 elion/generators/release/data/
+elion/properties/activity/CHEMBERT/model/
 
 # Directories
 .vscode/
