--- a/elion/input_example.yml
+++ b/elion/input_example.yml
@@ -4,7 +4,7 @@ control:
   history_file: "biasing_history.csv"
   max_iter: 1000
   comment: "ReLeaSE Generator Test"
-  verbosity: 2
+  verbosity: 0
   smi_file: "/home/seabra/work/li/elion_dev/bleeding/elion/example_smiles.smi"
 generator:
   name: "ReLeaSE"
@@ -23,7 +23,9 @@ properties:
     rew_weight: 0.7
     rew_class: 'soft'
     rew_acc: 0.05
-  Prop3:
+  SAScore:
+    prop_class: 'primary'
+  QEDScore:
     prop_class: 'primary'
   VinaScore: 
     prop_class: 'primary'
