--- a/elion/input_example.yml
+++ b/elion/input_example.yml
@@ -33,10 +33,10 @@ properties:
   QEDScore:
     prop_class: 'primary'
     threshold: 0.5
-  VinaScore: 
+  CHEMBERT_BE:
     prop_class: 'primary'
+    model_file: 'elion/properties/CHEMBERT/example_model.pt'
     optimize: True
-    threshold_init: -8.0
+    threshold: -8.0
     threshold_limit: -12.0
     threshold_step: -0.01
-
