Modifications to allow Elion as a package.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ systems/**
 
 
 
+src/elion.egg-info/dependency_links.txt
+src/elion.egg-info/entry_points.txt
+src/elion.egg-info/PKG-INFO
+src/elion.egg-info/SOURCES.txt
+src/elion.egg-info/top_level.txt
